@@ -68,20 +68,8 @@ reads the Changes file to get the list of changes in the just-released version.
 sub get_commit_message {
     my $self = shift;
 
-    # parse changelog to find commit message
-    my $changelog = Dist::Zilla::File::OnDisk->new( { name => $self->changelog } );
-    my $newver    = $self->zilla->version;
-    my @content   =
-        grep { /^$newver\s+/ ... /^\S/ } # from newver to un-indented
-        split /\n/, $changelog->content;
-    shift @content; # drop the version line
-    # drop unindented last line and trailing blank lines
-    pop @content while ( @content && $content[-1] =~ /^(?:\S|\s*$)/ );
-
-    # return commit message
-    return join("\n", "v$newver\n", @content, ''); # add a final \n
+    return _format_string($self->commit_msg, $self);
 } # end get_commit_message
-
 
 # -- private methods
 
@@ -92,9 +80,11 @@ sub _get_changes {
     my $changelog = Dist::Zilla::File::OnDisk->new( { name => $self->changelog } );
     my $newver    = $self->zilla->version;
     my @content   =
-        grep { /^$newver\s+/ ... /^(\S|\s*$)/ }
+        grep { /^$newver\s+/ ... /^\S/ } # from newver to un-indented
         split /\n/, $changelog->content;
     shift @content; # drop the version line
+    # drop unindented last line and trailing blank lines
+    pop @content while ( @content && $content[-1] =~ /^(?:\S|\s*$)/ );
 
     # return commit message
     return join("\n", @content, ''); # add a final \n
