@@ -1,6 +1,7 @@
 Revision history for Dist::Zilla::Plugin::Git
 
 {{$NEXT}}
+ - actually use commit_msg (christopher madsen)
 
 1.100741  2010-03-15 18:48:31 Europe/Paris
  - documentation fix for new push_to param
